# opuspy

./: pyproject.toml
src/opuspy/: __init__.py  opus.py  opus_contextmanager.py
