[project]
name = "opuspy"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["brkrpautils", "loguru", "pywin32"]

[tool.uv.sources]
brkrpautils = { git = "https://github.com/BorholmsRegionsKommuneIT/brkrpautils" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
