[project]
name = "opuspy"
version = "0.3.0"
description = "Python SAP Opus client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["brkrpautils>=0.1.0", "pywin32>=300"]

[tool.uv.sources]
brkrpautils = { git = "https://github.com/BorholmsRegionsKommuneIT/brkrpautils" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
